pipeline/serving/mlserve.svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mlserve
  name: mlserve
  namespace: argo
spec:
  ports:
  - name: 1234-1234
    port: 1234
    protocol: TCP
    targetPort: 1234
  selector:
    app: mlserve
  type: ClusterIP
status:
  loadBalancer: {}
