pipeline/serving/mlserve.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlserve
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/mlserve(/|$)(.*)"
        backend:
          service:
            name: mlserve
            port:
              number: 1234
